# wingman

./: CLAUDE.md  LICENSE  PLAN_COMPARISON.md  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: aur.yml  lint.yml  release.yml
docker/: Dockerfile  Dockerfile.arch
packaging/: README.md  wingman-netbird-setcap.hook
packaging/arch/: .SRCINFO  .gitignore  PKGBUILD  wingman-git.install  wingman-netbird-dns.rules  wingman-netbird-setcap.hook
src/twinbird/: cli.py  daemon.py  instance.py  netbird.py  platform.py  service.py
src/wingman/: cli.py  config.py  daemon.py  instance.py  netbird.py  platform.py  service.py
tests/: test_config.py  test_daemon.py  test_instance.py  test_netbird.py  test_platform.py  test_service.py
